prettied up post card

--- a/src/pages/posts/20240509.md
+++ b/src/pages/posts/20240509.md
@@ -1,10 +1,10 @@
 ---
-istitle: false
-title: ""
+istitle: true
+title: "finding a new home online"
 pubDate: 2024-05-09
 tags: ["shortform"]
 ---
-A while ago when twitter hit a point where it just wasn't fun for me anymore I had an idea. What if we all just went back to having individual blogs. Not in a boring or nerdy way but in a that let's people just put there stuff online. That's what I wanted. A home online. A home for short form twitter style posts, longer form researched blog posts, and even videos if that's something I wanted to pursue again. 
+A while ago twitter hit a point where it just wasn't fun for me anymore I had an idea. What if we all just went back to having individual blogs. Not in a boring or nerdy way but in way a that let's people just put there stuff online. That's what I wanted. A home online. A home for short form twitter style posts, longer form researched blog posts, and even videos if that's something I wanted to pursue again. 
 
 
 After throwing that idea around for a while I moved on from it. I had thrown together something using Sanity.io as a backend but it still didn't stick for me. Mostly because the way I built it out meant I needed a title and had to maintain another system on top of fighting with nextjs.
